Added the "test struct" file.

--- a/MemoryAllocator/MemoryAllocator/MemoryAllocator.vcxproj
+++ b/MemoryAllocator/MemoryAllocator/MemoryAllocator.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PoolAllocator.h" />
+    <ClInclude Include="TestStructs.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
