--- a/MemoryAllocator/MemoryAllocator/MemoryAllocator.vcxproj.filters
+++ b/MemoryAllocator/MemoryAllocator/MemoryAllocator.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="TestStructs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="StackAllocator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PoolAllocator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="StackAllocator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
