--- a/MemoryAllocator/MemoryAllocator/MemoryAllocator.vcxproj
+++ b/MemoryAllocator/MemoryAllocator/MemoryAllocator.vcxproj
@@ -20,7 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PoolAllocator.h" />
+    <ClInclude Include="PoolAllocatorLock.h" />
     <ClInclude Include="StackAllocator.h" />
+    <ClInclude Include="StackAllocatorLock.h" />
     <ClInclude Include="TestCaseController.h" />
     <ClInclude Include="TestStructs.h" />
     <ClInclude Include="Timer.h" />
@@ -28,7 +30,9 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PoolAllocator.cpp" />
+    <ClCompile Include="PoolAllocatorLock.cpp" />
     <ClCompile Include="StackAllocator.cpp" />
+    <ClCompile Include="StackAllocatorLock.cpp" />
     <ClCompile Include="TestCaseController.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
