--- a/MemoryAllocator/MemoryAllocator/makefile
+++ b/MemoryAllocator/MemoryAllocator/makefile
@@ -4,3 +4,7 @@ test1: MemoryManager.cpp StackAllocator.cpp PoolAllocator.cpp Timer.h
 test2:	MemoryManager.cpp StackAllocator.cpp PoolAllocator.cpp Timer.h
 	g++ -std=gnu++11 -o test2 test2.cpp MemoryManager.cpp StackAllocator.cpp PoolAllocator.cpp Timer.h
 	./test2
+
+test3:	MemoryManager.cpp StackAllocator.cpp PoolAllocator.cpp Timer.h
+	g++ -std=gnu++11 -o test3 test3.cpp MemoryManager.cpp StackAllocator.cpp PoolAllocator.cpp Timer.h
+
